added Bonus file

--- a/Bonus.ipynb
+++ b/Bonus.ipynb
@@ -10,82 +10,204 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "#from config import user_name,password \n",
     "# SQL Alchemy\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://UN:PW@localhost:5432/SQL_homework')\n",
+    "engine = create_engine('postgresql://user_name:password@localhost:5432/SQL_homework')\n",
     "#engine = create_engine('postgresql://127.0.0.1:50680/SQL_homework')\n",
     "connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            avg\n",
-      "0  52970.732451\n",
-      "                title\n",
-      "0  Assistant Engineer\n",
-      "1            Engineer\n",
-      "2             Manager\n",
-      "3     Senior Engineer\n",
-      "4        Senior Staff\n",
-      "5               Staff\n",
-      "6    Technique Leader\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Assistant Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Senior Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Senior Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Technique Leader</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                title\n",
+       "0  Assistant Engineer\n",
+       "1            Engineer\n",
+       "2             Manager\n",
+       "3     Senior Engineer\n",
+       "4        Senior Staff\n",
+       "5               Staff\n",
+       "6    Technique Leader"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "avg_salary = pd.read_sql(\"SELECT AVG(salary)FROM salaries;\", connection)\n",
-    "print(avg_salary)\n",
     "title = pd.read_sql(\"SELECT title FROM titles GROUP BY title;\",connection)\n",
-    "print(title)"
+    "title_df = pd.DataFrame(title)\n",
+    "title_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                title  avg_salary\n",
-      "0  Assistant Engineer     48493.0\n",
-      "1            Engineer     48540.0\n",
-      "2             Manager     51531.0\n",
-      "3     Senior Engineer     48507.0\n",
-      "4        Senior Staff     58503.0\n",
-      "5               Staff     58465.0\n",
-      "6    Technique Leader     48581.0\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>avg_salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Assistant Engineer</td>\n",
+       "      <td>48493.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>48540.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Manager</td>\n",
+       "      <td>51531.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>48507.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Senior Staff</td>\n",
+       "      <td>58503.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>58465.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Technique Leader</td>\n",
+       "      <td>48581.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                title  avg_salary\n",
+       "0  Assistant Engineer     48493.0\n",
+       "1            Engineer     48540.0\n",
+       "2             Manager     51531.0\n",
+       "3     Senior Engineer     48507.0\n",
+       "4        Senior Staff     58503.0\n",
+       "5               Staff     58465.0\n",
+       "6    Technique Leader     48581.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "avgsalary_title = pd.read_sql(\"SELECT t.title,ROUND(AVG(s.salary)) AS avg_salary FROM salaries AS s JOIN titles AS t ON t.emp_no = s.emp_no GROUP BY title;\", connection)\n",
-    "print(avgsalary_title)"
+    "avgsalary_title_df = pd.DataFrame(avgsalary_title)\n",
+    "avgsalary_title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,11 +242,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Data Engineering Steps:\n",
+    "1. Created ERD from http://www.quickdatabasediagrams.com/ by writing CREAT TABLE query and used the tool to make foreign key and relationship between tables.\n",
+    "2. Export the ERD in Download Folder and open in pgAdmin4 and created table schemata.\n",
+    "3. Import all 6 CSV files to insert the data into corresponding tables which created before."
+   ]
   }
  ],
  "metadata": {
