added config file

--- a/Bonus.ipynb
+++ b/Bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,27 +10,36 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "#from config import user_name,password \n",
+    "from config import userid,pwd\n",
     "# SQL Alchemy\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://user_name:password@localhost:5432/SQL_homework')\n",
+    "#engine = create_engine('postgresql://user_name:password@localhost:5432/SQL_homework')\n",
+    "engine=create_engine(f'postgresql://{userid}:{pwd}@localhost:5432/SQL_homework')\n",
+    "conn=engine.connect()\n",
     "#engine = create_engine('postgresql://127.0.0.1:50680/SQL_homework')\n",
     "connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +110,7 @@
        "6    Technique Leader"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +203,7 @@
        "6    Technique Leader     48581.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,14 +251,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>April</td>\n",
+       "      <td>Foolsday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first_name last_name\n",
+       "0      April  Foolsday"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epilogue = pd.read_sql(\"SELECT first_name,last_name FROM employees where emp_no = 499942;\",connection)\n",
+    "epilogue"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Data Engineering Steps:\n",
     "1. Created ERD from http://www.quickdatabasediagrams.com/ by writing CREAT TABLE query and used the tool to make foreign key and relationship between tables.\n",
-    "2. Export the ERD in Download Folder and open in pgAdmin4 and created table schemata.\n",
+    "2. Created table schemata.\n",
     "3. Import all 6 CSV files to insert the data into corresponding tables which created before."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
